--- a/OdooXAdani/odooclient/package.json
+++ b/OdooXAdani/odooclient/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "aos": "^2.3.4",
-     "axios": "^1.6.0"
+    "axios": "^1.6.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
